[package]
name = "tracing-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.81"
bbqueue-sync = "0.5.1"
rzcobs = "0.1.2"
kolben = "0.0.3"

[dependencies.postcard]
version = "0.7.3"
path = "./postcard"
features = ["use-std"]

[dependencies.groundhog]
version = "0.2.5"
features = ["std", "instant"]

[dependencies.serde]
version = "1.0.137"
default-features = false
features = ["derive"]

[dependencies.tracing-core]
# git = "https://github.com/tokio-rs/tracing/"
# version = "0.2.0"
# branch = "master"
path = "./tracing/tracing-core"
default-features = false

[dependencies.tracing]
# git = "https://github.com/tokio-rs/tracing/"
# version = "0.2.0"
# branch = "master"
path = "./tracing/tracing"
default-features = false

[dependencies.tracing-serde]
# git = "https://github.com/tokio-rs/tracing/"
# version = "0.2.0"
# branch = "master"
package = "tracing-serde-structs"
path = "./tracing/tracing-serde-structs"
default-features = false
features = ["std"]

# [dependencies.tracing-subscriber]
# git = "https://github.com/tokio-rs/tracing/"
# version = "0.3.0"
# branch = "master"
# default-features = false
