[package]
name = "tracing-serde-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.10.0"
crossbeam-channel = "0.5.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tracing-serde-wire]
path = "../tracing-serde-wire"

[dependencies.tracing-core]
# git = "https://github.com/tokio-rs/tracing/"
# version = "0.2.0"
# branch = "master"
path = "./../../tracing/tracing-core"

[dependencies.tracing-serde]
# git = "https://github.com/tokio-rs/tracing/"
# version = "0.2.0"
# branch = "master"
path = "./../../tracing/tracing-serde"
